--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -1,4 +1,4 @@
-$color: purple; // Define a SCSS variable
+$color: white; // Define a SCSS variable
 
 #main>h1 {
     border: 4px solid $color; // Use the variable we defined
