--- a/src/index.scss
+++ b/src/index.scss
@@ -214,6 +214,27 @@ div#info.showing {
     overflow: scroll;
 }
 
+div#popup.showing {
+    position: absolute;
+    background-color: #000;
+    border: 3px solid #fff;
+    width: 450px;
+    height: 50%;
+    top: 15%;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: scroll;
+}
+
+div#images {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+}
+
 div#info.showing > p {
     padding: 10px;
 }
