--- a/src/index.scss
+++ b/src/index.scss
@@ -204,15 +204,17 @@ div#info.showing {
     background-color: #000;
     border: 3px solid #fff;
     width: 450px;
-    height: 95%;
+    height: 90%;
     top: 3%;
     left: 0;
     right: 0;
-    padding: 5px;
+    padding: 12px;
     margin-left: auto;
     margin-right: auto;
     overflow: scroll;
     z-index: 2;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 div#popup.showing {
@@ -220,7 +222,8 @@ div#popup.showing {
     background-color: #000;
     border: 3px solid #fff;
     width: 450px;
-    height: 50%;
+    min-height: 25%;
+    max-height: 50%;
     top: 15%;
     left: 0;
     right: 0;
@@ -228,6 +231,11 @@ div#popup.showing {
     margin-left: auto;
     margin-right: auto;
     overflow: scroll;
+}
+
+div#popup.showing > p {
+    padding-right: 35px;
+    padding-left: 35px;
 }
 
 div#ladderPopUpButtons {
@@ -266,14 +274,16 @@ text.word {
 }
 
 div#return2 {
-    position: absolute;
+    position: relative;
     z-index: 2;
-    top: -10px;
+    cursor: pointer;
+    margin: 6px;
+    text-align: center;
 }
 
 a.boldAnchor:hover {
     transform: scale(1.3);
-    transition: 1s;
+    transition: .5s;
     cursor: pointer;
 
 }
@@ -301,4 +311,46 @@ a.rotate:hover {
     100% {
       color: #6666ff;
     }
+}
+div#info div#animation {
+    height: 25px;
+    width: 450px;
+    transition: height 2s;
+}
+div#xAnchor {
+    position: absolute;
+    top: -3px;
+    right: calc(50% - 251px);
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 70px;
+    z-index: 3;
+
+    a {
+        background: none;
+        cursor: pointer;
+    }
+}
+div#xAnchorpopup {
+    position: absolute;
+    top: calc(11% + 5px);
+    right: calc(50% - 244px);
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 70px;
+    z-index: 3;
+
+    a {
+        background: none;
+        cursor: pointer;
+    }
+}
+
+form > p {
+    width: 248px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6px;
+    font-size: 22px;
 }
